@@ -12,6 +12,7 @@ VERSION=1.1.0
 # Note that this list is only for C files.
 MAIN_PROGRAM_CSOURCEFILES=\
    ds_array_test\
+   ds_cfg_test\
    ds_hmap_test\
    ds_ll_test\
    ds_plist_test\
@@ -47,6 +48,7 @@ MAIN_PROGRAM_CPPSOURCEFILES=\
 # Note that this list is only for C files.
 LIBRARY_OBJECT_CSOURCEFILES=\
    ds_array\
+   ds_cfg\
    ds_hmap\
    ds_ll\
    ds_plist\
@@ -82,6 +84,7 @@ LIBRARY_OBJECT_CPPSOURCEFILES=\
 # headers (relative to this directory).
 HEADERS=\
    src/ds_array.h\
+   src/ds_cfg.h\
    src/ds_hmap.h\
    src/ds_ll.h\
    src/ds_stack.h\
