@@ -1,0 +1,21 @@
+
+# No section at first, lets see what gets stored.
+
+key1 = value 1
+   key 2 = value     2      
+
+   [section1]
+key3=value3       # extra comment at end of line
+
+# This key is to be removed
+key3.3=value3.3       # extra comment at end of line
+
+# ###################################
+# The following line, when uncommented,
+# must result in an error during parsing.
+   # cdscsdc
+key3.4 = value 3.4
+
+[section2]
+key 4 = value 4
+
